Fixed pixel shift in RN logo hover

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -61,7 +61,7 @@ table {
 }
 
 #respect{
-	width:256px;
+	width:255px;
 	height:70px;
 	background-image:url(../images/sponsors/RN-Logo-Hover.png);
 	background-position:top;
